feat: refactor implementation to use virtual threads instead of system threads